--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
+RewriteCond %{HTTP_HOST} !=localhost
 RewriteCond %{HTTP_HOST} !=""
 RewriteCond %{HTTP_HOST} !^www\. [NC]
 RewriteCond %{HTTPS}s ^on(s)|
